<?xml version="1.0"?>
<package>
  <name>auto_slam_map</name>
  <version>0.0.0</version>
  <description>The massif.ai slam map package</description>

  <maintainer email="shenrk120532@aliyun.com">shenrk</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>geodesy</build_depend>
  <build_depend>nmea_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>pcl_ros</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>geodesy</run_depend>
  <run_depend>nodelet</run_depend>
  <run_depend>nmea_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>




  <!-- <build_depend>rospy</build_depend>
  <run_depend>rospy</run_depend>
  <build_depend>ros_bridge</build_depend>
  <run_depend>ros_bridge</run_depend>
  
  <build_depend>tf</build_depend>
  <run_depend>tf</run_depend>

  <build_depend>pcl_conversions</build_depend>
  <run_depend>pcl_conversions</run_depend>

  <build_depend>cv_bridge</build_depend>
  <run_depend>cv_bridge</run_depend>

  <build_depend>std_msgs</build_depend>
  <run_depend>std_msgs</run_depend>
  <build_depend>auto_slam_map</build_depend>
  <run_depend>auto_slam_map</run_depend>
  <build_depend>sensors_msgs</build_depend>
  <run_depend>sensors_msgs</run_depend>
  <build_depend>geometry_msgs</build_depend>
  <run_depend>geometry_msgs</run_depend>
  <build_depend>nav_msgs</build_depend>
  <run_depend>nav_msgs</run_depend>

  <build_depend>image_transport</build_depend>
  <run_depend>image_transport</run_depend> -->

  <export>
    <nodelet plugin="${prefix}/nodelet_plugins.xml" />
  </export>
  
</package>
